--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+/* Material Symbols Outlined */
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 /* Global Default Font - Tajawal */
 body {
   font-family: "Tajawal", sans-serif;
